# fused-kalman-localization

./: CorrectorProvider.py  LICENSE  PredictorProvider.py  README.md  SigmaGenerator.py  pyproject.toml  testLinearKF.ipynb
rocket_example/: Cesaroni_21062O3400-P.csv  make_sensor_data.ipynb  physics_sim.ipynb  physics_sim.py  requirements.txt  sensor_data_with_truth.pkl  sensor_pickle_work.ipynb  state.pkl  utils.py
src/: CorrectorProvider.py  PredictorProvider.py
src/fused_kalman_localization/: CorrectorProvider.py  PredictorProvider.py  __init__.py
standalone_examples/: testLinearKF.ipynb  testUnscentedKF.ipynb
